# minecraft-version-manager

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: config.rs  downloader.rs  lib.rs  main.rs  models.rs  version_manager.rs
src/server/: mod.rs  paper.rs  server_types.rs  toml_config.rs  vanilla.rs
tests/: version_manager_tests.rs
tests/test_data/.mvm/: config.toml
